[package]
name = "ssh-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrussh = { version = "^0.33", git = "https://github.com/john-sharratt/thrussh.git" }
thrussh-keys = { version = "^0.21", git = "https://github.com/john-sharratt/thrussh.git" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.27"
anyhow = "1.0.70"
